assets/css/page-content.css
/* Default main content */
main {
    margin-left: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    padding-top: 90px;
    color: white;
    flex-grow: 1;
    transition: margin-left 0.3s ease-in-out;
}

html, body {
    margin: 0;
    padding: 0;
}

body {
    background-color: #171615;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Minecraft Ten', sans-serif;
    font-weight: normal;
    margin: 0;
    scroll-margin-top: 85px;
    line-height: 1.5;
}

h1 {
    font-size: 2.5rem;
    padding-top: 40px;
    padding-bottom: 15px;
}

h2 {
    font-size: 2.0rem;
    padding-top: 30px;
    padding-bottom: 10px;
}

h3 {
    font-size: 1.5rem;
    padding-top: 20px;
    padding-bottom: 5px;
}

p, ul, ol {
    font-size: 1rem;
    line-height: 1.5;
    font-family: Arial, sans-serif;
    margin: 0px;
    color: white;
    padding-bottom: 10px;
}

p, b, strong, a {
    word-wrap: break-word;
}

a {
    color: #44baff;
    text-decoration: none;
    line-height: 1;
}

a:hover {
    text-decoration: underline;
    font-size: 1em;
    line-height: 1;
    font-family: Arial, sans-serif;
}

li {
    font-size: inherit;
    line-height: inherit;
    font-family: inherit;
}

ul ul, ul ol, ol ul, ol ol {
    font-size: inherit;
    line-height: inherit;
    font-family: inherit;
    color: inherit;
    font-weight: normal;
}

img.rounded-corners {
    border-radius: 20px;
}

img.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

img.pixel-art {
    image-rendering: pixelated;
    image-rendering: crisp-edges;
}

code {
    background-color: #1e1e1e;
    color: #cfcfcf;
    font-family: monospace;
    padding: 2px 5px;
    border-radius: 4px;
    font-size: 0.95em;
    word-break: break-all;
    white-space: pre-wrap;
}

